tests/baselines/reference/typeFromPrototypeAssignment4(strict=true).errors.txt
a.js(11,12): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
  No index signature with a parameter of type 'string' was found on type '{}'.
a.js(15,1): error TS7053: Element implicitly has an 'any' type because expression of type '"add-on"' can't be used to index type '{ get(key: string): number; }'.
  Property 'add-on' does not exist on type '{ get(key: string): number; }'.
a.js(16,1): error TS7053: Element implicitly has an 'any' type because expression of type '"addon"' can't be used to index type '{ get(key: string): number; }'.
  Property 'addon' does not exist on type '{ get(key: string): number; }'.
a.js(17,1): error TS7053: Element implicitly has an 'any' type because expression of type '"__underscores__"' can't be used to index type '{ get(key: string): number; }'.
  Property '__underscores__' does not exist on type '{ get(key: string): number; }'.


==== a.js (4 errors) ====
    function Multimap4() {
      this._map = {};
    };
    
    Multimap4["prototype"] = {
      /**
       * @param {string} key
       * @returns {number} the value ok
       */
      get(key) {
        return this._map[key + ''];
               ~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{}'.
      }
    };
    
    Multimap4["prototype"]["add-on"] = function() {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"add-on"' can't be used to index type '{ get(key: string): number; }'.
!!! error TS7053:   Property 'add-on' does not exist on type '{ get(key: string): number; }'.
    Multimap4["prototype"]["addon"] = function() {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"addon"' can't be used to index type '{ get(key: string): number; }'.
!!! error TS7053:   Property 'addon' does not exist on type '{ get(key: string): number; }'.
    Multimap4["prototype"]["__underscores__"] = function() {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"__underscores__"' can't be used to index type '{ get(key: string): number; }'.
!!! error TS7053:   Property '__underscores__' does not exist on type '{ get(key: string): number; }'.
    
    const map4 = new Multimap4();
    map4.get("");
    map4["add-on"]();
    map4.addon();
    map4.__underscores__();
    